# qwebdriver

./: README.md  pyproject.toml  setup.cfg
qwebdriver/: iwebdriver.py  webdriver.py
