[metadata]
name = qwebdriver
version = 0.0.1
url = 
description = A simili webdriver with QWebEngine
# long_description = file: README.md
# long_description_content_type = text/markdown
keywords = webdriver
author_email = Jonathan Poelen <jonathan.poelen@gmail.com>
license = MIT

[options]
packages = qwebdriver
python_requires = >=3.6
install_requires =
    PySide2

# [options.extras_require]
# dev = pytest
